Added mobile styles and social icons

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Africode Web Solutions</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<!--  Header Banner  -->
+<!--  Header Showcase  -->
    <header id="header-showcase" class="grid">
        <div class="bg-img"></div>
        <div class="content-wrap">
@@ -15,6 +16,7 @@
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias a ipsum reiciendis veniam aliquid facere commodi sit totam deleniti ducimus.</p>
            </div>
        </div>
+       <a href="#section-b" class="btn" style="scroll-behavior: smooth;">Read More</a>
    </header>
    
 <!--Main Area -->
@@ -31,11 +33,11 @@
      </section>
      
 <!--    Section B      -->
-  <section id="section-c" class="grid">
+  <section id="section-b" class="grid">
       <ul>
           <li>
               <div class="card">
-                  <img src="" alt="">
+                  <img src="./assets/gray-laptop-computer-showing-html-codes-in-shallow-focus-160107.jpg" alt="">
                   <div class="card-content">
                       <h2 class="content-title">Website Development</h2>
                       <div class="content-text">
@@ -46,9 +48,9 @@
           </li>
           <li>
               <div class="card">
-                  <img src="" alt="">
+                  <img src="assets/android-android-phone-cell-phone-cellphone-404280.jpg" alt="">
                   <div class="card-content">
-                      <h2 class="content-title">Website Development</h2>
+                      <h2 class="content-title">Mobile Application Development</h2>
                       <div class="content-text">
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem dolorum nisi ut, provident, ipsa officia a suscipit. A facere, aliquid.</p>
                       </div>
@@ -57,9 +59,9 @@
           </li>
           <li>
               <div class="card">
-                  <img src="" alt="">
+                  <img src="assets/business-charts-commerce-computer-265087.jpg" alt="">
                   <div class="card-content">
-                      <h2 class="content-title">Website Development</h2>
+                      <h2 class="content-title">Digital Marketing</h2>
                       <div class="content-text">
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem dolorum nisi ut, provident, ipsa officia a suscipit. A facere, aliquid.</p>
                       </div>
@@ -69,10 +71,9 @@
       </ul>
   </section>
   <!--  Section C -->
-  <section id="section-D" class="grid">
+  <section id="section-c" class="grid">
       <div class="content-wrap">
-          <h2 class="content-title">We Handle All your </h2>
-          <h2 class="content-title">We Handle All your Digital Needs</h2>
+          <h2 class="content-title">We Handle All your Digital Needs </h2>
           <div class="content-text">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae voluptatibus necessitatibus rem, eligendi deleniti, sint alias. Sint perspiciatis excepturi obcaecati! Et ipsum ipsa, possimus enim!</p>
           </div>
@@ -99,7 +100,14 @@
    </main>
    <footer id="main-footer" class="grid">
        <div>Africode Web Solutions</div>
-       <div>Powered By Aggreh Odafe</div>
+       <div>
+            <ul>
+                <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+                <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+                <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
+                <li><i class="fa fa-github" aria-hidden="true"></i></li>
+           </ul>
+       </div>
    </footer>
     
 </body>
