Completed both mobile and large screen size styles

--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
            <div class="content-text">
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias a ipsum reiciendis veniam aliquid facere commodi sit totam deleniti ducimus.</p>
            </div>
+           <a href="#section-b" class="btn">Read More</a>
        </div>
-       <a href="#section-b" class="btn" style="scroll-behavior: smooth;">Read More</a>
+       
    </header>
    
 <!--Main Area -->
    
    <main id="main">
      <!--   Section A -->
-     <section id="sction-a" class="grid">
+     <section id="section-a" class="grid">
         <div class="content-wrap">
             <h2 class="content-title">Web And Application Development</h2>
          <div class="content-text">
