Adjusted content titile padding

--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=divice-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Africode Web Solutions</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+  
 <!--  Header Showcase  -->
    <header id="header-showcase" class="grid">
        <div class="bg-img"></div>
        <div class="content-wrap">
-           <h1 class="content-title">Africode Web Inovations</h1>
+           <h1 class="content-title">We Power The Web!</h1>
            <div class="content-text">
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias a ipsum reiciendis veniam aliquid facere commodi sit totam deleniti ducimus.</p>
            </div>
@@ -101,8 +102,10 @@
   </section>
    </main>
    <footer id="main-footer" class="grid">
-       <div>Africode Web Solutions</div>
        <div>
+           <p>Africode Web Solutions</p>
+       </div>
+       <div class="social-icons">
             <ul>
                 <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
                 <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
@@ -111,6 +114,8 @@
            </ul>
        </div>
    </footer>
+   
+   <script type="text/javascript" src="app.js"></script>
     
 </body>
 </html>
