fixed all known visual design issues

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=divice-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Africode Web Solutions</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -12,7 +12,7 @@
    <header id="header-showcase" class="grid">
        <div class="bg-img"></div>
        <div class="content-wrap">
-           <h1 class="content-title">Africode Web Inovations</h1>
+           <h1 class="content-title">We Power The Web!</h1>
            <div class="content-text">
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias a ipsum reiciendis veniam aliquid facere commodi sit totam deleniti ducimus.</p>
            </div>
